--- a/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
+++ b/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2059,11 +2059,11 @@
    "source": [
     "**Exercise 4**:  In this example, what is the value of $T_{\\mathbf{K}\\mathbf{V}}$, $T_{\\mathbf{Q}}$, $h_i$, $h_o$ and $\\tau$ ?\n",
     "\n",
-    "> * $T_{\\mathbf{K}\\mathbf{V}} = 6$ \n",
-    "> * $T_{\\mathbf{Q}} = 15$ \n",
+    "> * $T_{\\mathbf{K}\\mathbf{V}} = 15$ \n",
+    "> * $T_{\\mathbf{Q}} = 6$ \n",
     "> * $h_i = 300$\n",
     "> * $h_o = 300$\n",
-    "> * $\\tau = \\sqrt{300}$"
+    "> * $\\tau = \\sqrt{300}\\approx 17.32$"
    ]
   },
   {
@@ -2353,9 +2353,9 @@
     "id": "TnDCifTxuGIM"
    },
    "source": [
-    "**Eercise 6** Would the results be different when shuffling the vectors $\\mathbf{K}$ and $\\mathbf{V}$ (with the same permutation for both vectors)?\n",
+    "**Exercise 6** Would the results be different when shuffling the vectors $\\mathbf{K}$ and $\\mathbf{V}$ (with the same permutation for both vectors)?\n",
     "\n",
-    "It would be different since the query matrix would be attending to different key-value pairs, leading to a different attention."
+    "It wouldn't be different since the order of tokens in the indices of the corresponding tokens would be the same in K-V matrices"
    ]
   },
   {
@@ -2819,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2843,6 +2843,76 @@
    },
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e739935fc7a1482c88ccc5bc8b0b8b0c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/26.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "95a0354824ec41e4a671da4ed84bc417",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/665 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c6f3fc16e094470ab18c0c0c0b779e7b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json:   0%|          | 0.00/1.04M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "430d4c4704fa49f79560d33e9e8336f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b292553b0dcf4bbaa100e082e40c0028",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -2853,12 +2923,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5944ac1b553461bb1a58d38b8005487",
+       "model_id": "110f233a7b1b4167b8c8dce5d1409da8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "model.safetensors:   0%|          | 0.00/353M [00:00<?, ?B/s]"
+       "model.safetensors:   0%|          | 0.00/548M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -2867,7 +2937,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54b75d8c814b49e9aa8a3ca625aeda2f",
+       "model_id": "c092420432f9496da0e064a114562ae9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2881,7 +2951,7 @@
    ],
    "source": [
     "# load a GPT-2 model\n",
-    "model_id = \"distilgpt2\"\n",
+    "model_id = \"gpt2\"\n",
     "# model_id = \"gpt2\"\n",
     "tokenizer = transformers.AutoTokenizer.from_pretrained(model_id)\n",
     "model = transformers.AutoModel.from_pretrained(model_id)\n",
@@ -2891,7 +2961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2904,11 +2974,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<|endoftext|>SINGAPORE: BENGALURU: The BJP's opposition has raised questions over the fate of a three-year-old girl at Sichu, in Uttar Pradesh's Gautam district, after she was taken with his\n",
-      "<|endoftext|>-10-06The following paragraphs are the most easily referenced in the BibleThere is only one way to answer a question: the one that's relevant to the story about the two\n",
-      "<|endoftext|>\"I will never get back to politics again,\" he said.\n",
-      "<|endoftext|>SOLVER CITY, Mich. -- Ohio State is expected to spend the next 11 seasons with a new head coach.\n",
-      "<|endoftext|> a long term (and sometimes even in the near future) in which we expect our economy to grow in tandem with the general economic environment.<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|>\n"
+      "<|endoftext|>JUNE 2016 - The International Red Cross (IRPC), which assists more than 70 million people across the globe, provided over 2.5 million donations to help meet the humanitarian needs of people impacted by water and sanitation in Bangladesh.Since\n",
+      "<|endoftext|>If you are not currently enrolled, please login.You will receive email notifications when the project is complete.You can choose to unsubscribe at any time.For new applicants:Follow the link below by clicking\n",
+      "<|endoftext|>In this first installment of our series on Linux on Windows/Mac, Scott and Steve join forces with Jason and I to talk about their new project Ubuntu on Windows.I'm also working on a Linux Kernel called Xenial, a Linux\n",
+      "<|endoftext|>It's clear that we feel that this series has only served to widen the gap between what we were able to see last week and what we expect to see in the future. Our goal as fans was to see who the best person in the world\n",
+      "<|endoftext|>2,000,000,000.000000 - 12,000 - 15,000 - 20,000 %1,000,000,000.000000 - 8,700 - 8,700 %Total 941 1,\n"
      ]
     }
    ],
@@ -2958,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2971,19 +3041,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Q: What is Hygge? A: For hygnies; hyms; cormus (sib) (horns) S+s(t): a = m = zH = GZ(t)), = b *\n",
-      "Q: What is Hygge? A: Hygg's an awesome dog-puzzypass as \"an expert fag for fangling.\" Her paws resemble real animal cormals for some reason I'm sure I was talking something\n",
-      "Q: What is Hygge? A: I have to make changes too,\" Hyegel asks his audience on ABC 9 Night Late last February [23-March - 9 February 1].That, combined on his recent show Q with Mr\n",
-      "Q: What is Hygge? A: Well of an open approach and on how. As expected from some others and in some ways a fairly traditional position among people are based that I get less out of this role, and therefore would still contribute\n",
-      "Q: What is Hygge? A: On our team last summer: we knew how talented Yupou Sakurai should still appear for them, the young center turned out really bad for him at 3. He‹ made about his face\n"
+      "How would you define Hygge?I would say it's a little bit of a combination of what we do and what we do in the world. We have a lot of resources that we put into our business. That's a big\n",
+      "How would you define Hygge?Hgge: Hygge is a term that is used to describe the behavior of a man who is constantly seeking sexual gratification.Males and females are often attracted to hygge\n",
+      "How would you define Hygge?I'm very happy to answer this question. It's a very difficult question. After all, it's not something you can talk about at a conference or even at your school. It's very hard\n",
+      "How would you define Hygge?Hygge: It's a very simple name. It's simply \"Hygge.\"How about this?Hygge: Okay, okay. It's literally the same\n",
+      "How would you define Hygge?Hygge was a term that comes to mind in the English language. Hygge is a word for \"the most beautiful woman\". It means \"the most beautiful woman\".It was\n"
      ]
     }
    ],
    "source": [
-    "prompt = \"Q: What is Hygge? A:\"\n",
+    "prompt = \"How would you define Hygge?\"\n",
     "input_ids = tokenizer.encode(prompt, return_tensors='pt')\n",
     "input_ids = input_ids.repeat(5, 1)\n",
-    "output = model.generate(input_ids, do_sample=True, temperature=5., max_length=50)\n",
+    "output = model.generate(input_ids, do_sample=True, temperature=.7, max_length=50)\n",
     "decoded = tokenizer.batch_decode(output)\n",
     "for txt in decoded:\n",
     "    txt = txt.replace(\"\\n\", \"\")\n",
