Fixed issue in 'V.d Information Retrieval' that the sentence "What is the capital city of {country}?" was generated based on keys_cities_labels.

--- a/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
+++ b/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
@@ -2129,7 +2129,7 @@
    "source": [
     "# Define some documents and questions\n",
     "documents = [f\"{city} is the capital of {country}\" for city, country in zip(keys_cities_labels, keys_labels)]\n",
-    "questions =  [f\"What is the capital city of {country}?\" for country in keys_cities_labels]\n",
+    "questions =  [f\"What is the capital city of {country}?\" for country in keys_labels]\n",
     "\n",
     "# Tokenizer\n",
     "tokenizer_args = {\"padding\":True, \"truncation\":True, \"return_tensors\": \"pt\"}\n",
@@ -2200,11 +2200,8 @@
    "collapsed_sections": [],
    "provenance": []
   },
-  "interpreter": {
-   "hash": "e72cf85b1cff461a3287147b79b2cfd4bf5f57e721dfc08300645559174c8f4b"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "02456",
    "language": "python",
    "name": "python3"
   },
